--- a/bas_chat_bot/src/main/resources/application.properties
+++ b/bas_chat_bot/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.datasource.password=Baschat_123
 spring.jpa.open-in-view=false
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.connection.autocommit=false
+spring.flyway.baseline-on-migrate=true
