--- a/bas_chat_bot/src/main/resources/application.properties
+++ b/bas_chat_bot/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 
-#spring.jpa.hibernate.ddl-auto=none
-#spring.datasource.url=jdbc:mysql://localhost:3306/deneme
-#spring.datasource.username=root
-#spring.datasource.password=Baschat_123
-#spring.jpa.open-in-view=false
-#spring.jpa.show-sql=true
-#spring.jpa.properties.hibernate.connection.autocommit=false
-#spring.flyway.baseline-on-migrate=true
+spring.jpa.hibernate.ddl-auto=none
+spring.datasource.url=jdbc:mysql://localhost:3306/deneme
+spring.datasource.username=root
+spring.datasource.password=Baschat_123
+spring.jpa.open-in-view=false
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.connection.autocommit=false
+spring.flyway.baseline-on-migrate=true
