--- a/front end/bas_world_design/package.json
+++ b/front end/bas_world_design/package.json
@@ -11,6 +11,8 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.2",
     "react-scripts": "^2.1.3",
+    "react-simple-chatbot": "^0.6.1",
+    "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
