--- a/bas_chat_bot/build.gradle
+++ b/bas_chat_bot/build.gradle
@@ -1,8 +1,8 @@
 plugins {
-    id 'org.springframework.boot' version '2.7.4'
-    id 'io.spring.dependency-management' version '1.0.14.RELEASE'
+    id 'org.springframework.boot' version '2.7.3'
+    id "org.sonarqube" version "3.4.0.2513"
+    id 'io.spring.dependency-management' version '1.0.13.RELEASE'
     id 'java'
-    //id 'org.flywaydb.flyway' version '6.4.3'
 }
 
 group = 'com.code_of_duty'
