--- a/bas_chat_bot/src/main/resources/application.properties
+++ b/bas_chat_bot/src/main/resources/application.properties
@@ -1,9 +1,8 @@
-
-spring.jpa.hibernate.ddl-auto=create
-spring.datasource.url=jdbc:mysql://localhost:3306/deneme
-spring.datasource.username=root
-spring.datasource.password=Baschat_123
-spring.jpa.open-in-view=false
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/group_project
+spring.datasource.username=zhizgov
+spring.datasource.password=zhizgov
+server.port=9091
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.connection.autocommit=false
-spring.flyway.baseline-on-migrate=true
+spring.jpa.properties.hibernate.format_sql=true
