--- a/bas_chat_bot/build.gradle
+++ b/bas_chat_bot/build.gradle
@@ -28,7 +28,9 @@ dependencies {
     implementation 'com.auth0:java-jwt:3.18.3'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     compileOnly 'org.projectlombok:lombok'
-    runtimeOnly 'mysql:mysql-connector-java'
+    //runtimeOnly 'mysql:mysql-connector-java'
+    runtimeOnly 'com.microsoft.sqlserver:mssql-jdbc'
+    implementation 'com.microsoft.sqlserver:mssql-jdbc:11.2.1.jre8'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
