--- a/bas_chat_bot/build.gradle
+++ b/bas_chat_bot/build.gradle
@@ -27,7 +27,9 @@ dependencies {
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testRuntimeOnly 'com.h2database:h2' }
+    testRuntimeOnly 'com.h2database:h2'
+
+}
 
 tasks.named('test') {
     useJUnitPlatform()
