--- a/bas_chat_bot/build.gradle
+++ b/bas_chat_bot/build.gradle
@@ -25,6 +25,9 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
+    //Web socket dependencies
+    implementation 'org.springframework.boot:spring-boot-starter-websocket'
+
     implementation 'com.auth0:java-jwt:3.18.3'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     compileOnly 'org.projectlombok:lombok'
