--- a/front end/bas_world_design/package.json
+++ b/front end/bas_world_design/package.json
@@ -14,6 +14,7 @@
     "react-router-dom": "^6.4.2",
     "react-scripts": "^2.1.8",
     "react-simple-chatbot": "^0.6.1",
+    "sass": "^1.56.2",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
   },
