--- a/bas_chat_bot/build.gradle
+++ b/bas_chat_bot/build.gradle
@@ -35,6 +35,9 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.cloud:spring-cloud-starter-bootstrap:3.1.3'
     testImplementation 'com.playtika.testcontainers:embedded-mysql:2.2.5'
+    implementation 'org.apache.lucene:lucene-snowball:3.0.2'
+
+
 }
 
 tasks.named('test') {
