--- a/front end/bas_world_design/package.json
+++ b/front end/bas_world_design/package.json
@@ -11,6 +11,7 @@
     "react": "^18.2.0",
     "react-chatbot-kit": "^2.1.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
     "react-router-dom": "^6.4.2",
     "react-scripts": "^2.1.8",
     "react-simple-chatbot": "^0.6.1",
