--- a/front end/bas_world_design/package.json
+++ b/front end/bas_world_design/package.json
@@ -15,6 +15,8 @@
     "react-scripts": "^2.1.8",
     "react-simple-chatbot": "^0.6.1",
     "sass": "^1.56.2",
+    "sockjs-client": "^1.6.1",
+    "stompjs": "^2.3.3",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
   },
