--- a/bas_chat_bot/build.gradle
+++ b/bas_chat_bot/build.gradle
@@ -38,8 +38,9 @@ dependencies {
     implementation 'com.microsoft.sqlserver:mssql-jdbc:11.2.1.jre8'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testImplementation 'org.springframework.cloud:spring-cloud-starter-bootstrap:3.1.3'
-    testImplementation 'com.playtika.testcontainers:embedded-mysql:2.2.5'
+    testImplementation 'org.springframework.security:spring-security-test'
+    //testImplementation 'org.springframework.cloud:spring-cloud-starter-bootstrap:3.1.3'
+    //testImplementation 'com.playtika.testcontainers:embedded-mysql:2.2.5'
 
 
 
