--- a/bas_chat_bot/build.gradle
+++ b/bas_chat_bot/build.gradle
@@ -23,6 +23,33 @@ repositories {
     }
 }
 
+//dependencies {
+//    implementation 'org.springframework.boot:spring-boot-starter-security'
+//    implementation 'org.springframework.boot:spring-boot-starter'
+//    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+//    implementation 'org.springframework.boot:spring-boot-starter-web'
+//    implementation 'org.springframework.boot:spring-boot-starter-validation'
+//    implementation ('org.springframework.boot:spring-boot-starter-websocket')
+//    implementation 'com.auth0:java-jwt:3.18.3'
+//    developmentOnly 'org.springframework.boot:spring-boot-devtools'
+//    compileOnly 'org.projectlombok:lombok'
+//    //runtimeOnly 'mysql:mysql-connector-java'
+//    runtimeOnly 'com.microsoft.sqlserver:mssql-jdbc'
+//    implementation 'com.microsoft.sqlserver:mssql-jdbc:11.2.1.jre8'
+//    annotationProcessor 'org.projectlombok:lombok'
+//    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+//    testImplementation 'org.springframework.cloud:spring-cloud-starter-bootstrap:3.1.3'
+//    testImplementation 'com.playtika.testcontainers:embedded-mysql:2.2.5'
+//
+//
+//
+//
+//
+//
+//
+//
+//}
+
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter'
@@ -38,8 +65,9 @@ dependencies {
     implementation 'com.microsoft.sqlserver:mssql-jdbc:11.2.1.jre8'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testImplementation 'org.springframework.cloud:spring-cloud-starter-bootstrap:3.1.3'
-    testImplementation 'com.playtika.testcontainers:embedded-mysql:2.2.5'
+    testImplementation 'org.springframework.security:spring-security-test'
+    //testImplementation 'org.springframework.cloud:spring-cloud-starter-bootstrap:3.1.3'
+    //testImplementation 'com.playtika.testcontainers:embedded-mysql:2.2.5'
 
 
 
@@ -49,6 +77,7 @@ dependencies {
 
 
 }
+
 
 tasks.named('test') {
     useJUnitPlatform()
